telemetry/alertmanager/netpol/default-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager-network-policy
spec:
  podSelector:
    matchLabels:
      app: alertmanager
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 443
  - to:
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    ports:
    - protocol: TCP
      port: 2379
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 9093
    - protocol: TCP
      port: 9094
